--- a/resources/css/scss/modules/_form.scss
+++ b/resources/css/scss/modules/_form.scss
@@ -88,12 +88,6 @@ td .form-group {
     .search-control {
         border: 0;
         padding: 0;
-        // .form-group, .form-set {
-        //     width: 100%;
-        // }
-        .form-group {
-            width: 100%;
-        }
         .label, .form-set {
             padding: 0;
             margin-right: 8px;
@@ -108,16 +102,49 @@ td .form-group {
 
 }
 
+.search-group {
+    display: flex;
+    .label {
+        @include font-size-sm;
+        // margin-right: 8px;
+        height: 28px;
+        color: $gray-7;
+        white-space: nowrap;
+        font-weight: 500;
+    }
+    .form-set {
+        // float: left;
+        flex: 1 1 auto;
+        padding-right: 20px;
+    }
+}
+
 .search-control {
     display: flex;
     align-items: center;
     position: relative;
-    padding: 24px 20px;
+    margin-top: 4px;
+    padding: 20px 20px;
+    padding-right: 89px;
     background: #fff;
     border: 1px solid $gray-e4;
     overflow: hidden;
     flex: 0 0 auto;
     flex-wrap: wrap;
+    &.control-3 .form-group {
+        width: 33.3%;
+        .label {
+            min-width: 62px;
+        }
+    }
+    &.table-style {
+        .k-button.search {
+            position: relative;
+            height: 100%;
+            margin-left: 8px;
+            border: 1px solid $gray-e4;;
+        }
+    }
     .search-line {
         display: flex;
         + .search-line {
@@ -125,13 +152,15 @@ td .form-group {
         }
     }
     .form-group {
+        margin: 4px 0;
         white-space: nowrap;
         > * + * {
             margin-left: 0;
         }
     }
     .form-set {
-        float: left;
+        // float: left;
+        flex: 1 1 auto;
         padding-right: 20px;
     }
     .h-btn.search {
